# flyer-tracker

./: .env.example  main.py  pyproject.toml  requirements.txt
static/: style.css
templates/: dashboard.html  landing.html  link_detail.html
